GPencil: Active layer separation freezes blender if layer is empty #101317

Closed
opened 2022-09-23 22:41:23 +07:00 by Gaku · 10 comments

Blender 3.3 Windows
Hi when i try Grease pencil active layer separation with "p" I get blender frozen.
why?

Capture.JPG

Blender 3.3 Windows Hi when i try Grease pencil active layer separation with "p" I get blender frozen. why? ![Capture.JPG](https://archive.blender.org/developer/F13561277/Capture.JPG)

Added subscriber: @GAKUTADA

Added subscriber: @GAKUTADA

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

This report does not contain all the requested information, which is required for us to investigate the issue.

Could you elaborate more the bug report and provide a .blend file with exact steps to reproduce the problem.

A guideline for making a good bug report can be found at https://wiki.blender.org/wiki/Process/Bug_Reports

This report does not contain all the requested information, which is required for us to investigate the issue. Could you elaborate more the bug report and provide a .blend file with exact steps to reproduce the problem. A guideline for making a good bug report can be found at https://wiki.blender.org/wiki/Process/Bug_Reports

I am using Blender 3.3 in windows 10
and if I try to separate draw to other layer with P I get frozen Blender scene
here's a file

GPseparate.blend

I am using Blender 3.3 in windows 10 and if I try to separate draw to other layer with P I get frozen Blender scene here's a file [GPseparate.blend](https://archive.blender.org/developer/F13564506/GPseparate.blend)
Antonio Vazquez self-assigned this 2022-09-25 09:47:53 +07:00
Antonio Vazquez changed title from GP active layer separation freezes blender to GPencil: Active layer separation freezes blender 2022-09-25 12:20:41 +07:00

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Antonio Vazquez changed title from GPencil: Active layer separation freezes blender to GPencil: Active layer separation freezes blender if layer is empty 2022-09-25 12:24:57 +07:00

This issue was referenced by 803d9f9748

This issue was referenced by 803d9f974876303e3c6c4a32743589c2efe10127

This issue was referenced by b6adca3280

This issue was referenced by b6adca32801044b93d55091593901a33557e01eb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101317
There is no content yet.