Fix T101317: GPencil separate Active layer freezes blender

The error occurs only when the layer is empty.